<resources>
    <string name="app_name">FeedCT</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Pesquisar</string>
    <string name="todas_section_format">%s %dº SEM</string>
    <string name="inscrito_em">Inscrito no turno %s</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirmar Password</string>
    <string name="prompt_name">Primeiro e Último Nome</string>
    <string name="prompt_numero">Numero de Aluno</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Criar Conta</string>
    <string name="email_sufix">\@campus.fct.unl.pt</string>
    <string name="welcome">"Bem Vindo !"</string>
    <string name="invalid_username">Email inválido</string>
    <string name="invalid_password">Password inválida</string>
    <string name="login_failed">"Login falhou"</string>
    <string name="semestreFilter">Semestre</string>
    <string name="departamentoFilter">Departamento</string>
    <string name="prompt_curso">Curso</string>
    <string name="order_by">Ordenar por:</string>
    <string name="date">Data</string>
    <string name="votes">Votos</string>
    <string name="cursoFilter">Curso</string>
    <string name="procuroFilter">Procuro</string>
    <string name="tenhoFilter">Tenho</string>
    <string name="turnosFilter">Turnos Aceites</string>
    <string-array name="turnosOptions">
        <item>Todos</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="modoOptions">
        <item>Aceitam-se pedidos de junção</item>
        <item>Aceitam-se pedidos automaticamente</item>
        <item>Não se aceitam pedidos</item>
    </string-array>
</resources>
